--- a/btns.html
+++ b/btns.html
@@ -54,12 +54,12 @@
    <div class="container border-0">
     <div class="card d-flex flex-column m-3 p-3">
         <h2 class="text-center display-5 fst-italic fw-bolder">Mouse Actions</h2>
-    <button class="btn btn-primary m-2" onclick="click1()">Left click</button>
-    <button class="btn btn-secondary m-2" onmouseover="mouseover()">MouseOver / MoveToElement</button>
-    <button class="btn btn-danger m-2 " ondblclick="dbl()">Double click</button>
-    <button class="btn btn-info m-2" onmouseout="mouseout()">Mouse Out</button>
-    <button class="btn btn-success m-2" onmousewheel="wheel()">scroll mouse wheel</button>
-    <button class="btn btn-light m-2 " id="btn"> 👉 Click -><a href="https://swisnl.github.io/jQuery-contextMenu/demo.html">Right click website link</a></button>
+    <button class="btn btn-primary m-2" onclick="click1()" name="btn1" id="btn1">Left click</button>
+    <button class="btn btn-secondary m-2" onmouseover="mouseover()" name="btn2" id="btn2">MouseOver / MoveToElement</button>
+    <button class="btn btn-danger m-2 " ondblclick="dbl()" name="btn3" id="btn3">Double click</button>
+    <button class="btn btn-info m-2" onmouseout="mouseout()" name="btn4" id="btn4">Mouse Out</button>
+    <button class="btn btn-success m-2" onmousewheel="wheel()" name="btn5" id="btn5">scroll mouse wheel</button>
+    <button class="btn btn-light m-2 " id="btn"> name="btn6" 👉 Click -><a href="https://swisnl.github.io/jQuery-contextMenu/demo.html">Right click website link</a></button>
     <h2 id="click" class="text-black text-center"></h2>
 </div>
 </div>
