--- a/btns.html
+++ b/btns.html
@@ -59,7 +59,7 @@
     <button class="btn btn-danger m-2 " ondblclick="dbl()" name="btn3" id="btn3">Double click</button>
     <button class="btn btn-info m-2" onmouseout="mouseout()" name="btn4" id="btn4">Mouse Out</button>
     <button class="btn btn-success m-2" onmousewheel="wheel()" name="btn5" id="btn5">scroll mouse wheel</button>
-    <button class="btn btn-light m-2 " id="btn"> name="btn6" 👉 Click -><a href="https://swisnl.github.io/jQuery-contextMenu/demo.html">Right click website link</a></button>
+    <button class="btn btn-light m-2 " id="btn" name="btn6">  👉 Click -><a href="https://swisnl.github.io/jQuery-contextMenu/demo.html">Right click website link</a></button>
     <h2 id="click" class="text-black text-center"></h2>
 </div>
 </div>
